--- a/client/src/index.html
+++ b/client/src/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div>Welcome to the Cryptochain...</div>
+    <div id="root"></div>
     <script src="index.js"></script>
   </body>
 </html>
